tests/test_assets/semantic/invalid/structs/temporary_field_target.cog
Point :: struct {
    x: i32;
}

make_point::() -> Point {
    return Point {
        x = 0,
    };
}

test::() -> void {
    make_point().x = 1;
}