tests/test_assets/semantic/invalid/structs/temporary_field_target.expected
semantic error at line 12: assignment target is not assignable
1 semantic error generated.
